creusot/tests/should_fail/prusti/logic/deref.stderr
error[creusot]: Invalid dereference
 --> deref.rs:6:6
  |
6 |     *x
  |      ^

error: aborting due to previous error

